--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -52,7 +52,7 @@
 </div>
 <div>
   <input type="range" id="rotate" name="length" min="0" max="360.00" value="120" step="30">
-  <label for="rotate">Height</label>
+  <label for="rotate">Rotate</label>
 </div>
 <!-- /////////////////////////////////////////////////////////////////////////// -->
                 <div><button id="downloadButton" disabled>Download</button></div>
@@ -145,7 +145,7 @@ function init() {
     camera.position.set(1, -1, 1) // like perspective view
 
     // very light grey for background, like rhino
-    scene.background = new THREE.Color('whitesmoke')
+    scene.background = new THREE.Color('black')
 
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
