--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -7,7 +7,7 @@
         <style>
             body {
                 margin: 0;
-                font-family: monospace;
+                font-family: Arial, Helvetica, sans-serif;
             }
             canvas { width: 100%; height: 100%; }
             input[type=range] { width: 30%; }
@@ -37,6 +37,7 @@
         <div id="loader"></div> 
         <div id="container">
             <div id="overlay">
+              <div><h1>DESIFN YOUR VASE FOR 3D PRINT</div>
 <!-- /////////////////////////////////////////////////////////////////////////// -->
       <div>
      <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
