--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -5,23 +5,31 @@
         <link rel="icon" href="data:,">
         <title>3D Print your Vase</title>
         <style>
-            body {
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
-            }
+          body {
+              margin: 0;
+              font-family: monospace;
+              background-color: black;
+          }
+          #info {
+            text-align: center;
+            background-color: transparent;
+            color: #fff;
+            margin: 10px;
+          }
+
             canvas { width: 100%; height: 100%; }
             input[type=range] { width: 30%; }
             #container { position: relative; }
             #container canvas, #overlay { position: absolute; }
-            #overlay { z-index: 1; width: 100%; }
+            #overlay { z-index: 1; width: 50%; }
             #overlay div { padding: 5px; }
             #loader {
-                border: 5px solid #000000; /* Light grey */
+                border: 5px solid #5a5959; /* Light grey */
                 border-top: 5px solid #3d3d3d; /* Grey */
                 border-radius: 50%;
                 width: 40px;
                 height: 40px;
-                animation: spin 1s linear infinite;
+                animation: spin 2s linear infinite;
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -37,7 +45,7 @@
         <div id="loader"></div> 
         <div id="container">
             <div id="overlay">
-              <div><h1>DESIFN YOUR VASE FOR 3D PRINT</div>
+              <div><h1>DESIGN YOUR VASE FOR 3D PRINT</div>
 <!-- /////////////////////////////////////////////////////////////////////////// -->
       <div>
      <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
@@ -139,6 +147,12 @@ function init() {
     // Rhino models are z-up, so set this as the default
     THREE.Object3D.DefaultUp = new THREE.Vector3( 0, 0, 1 );
 
+
+
+
+
+
+
     // create a scene and a camera
     scene = new THREE.Scene()
     scene.background = new THREE.Color(1, 1, 1)
@@ -146,7 +160,7 @@ function init() {
     camera.position.set(1, -1, 1) // like perspective view
 
     // very light grey for background, like rhino
-    scene.background = new THREE.Color('black')
+    scene.background = new THREE.Color(255,255,255,0)
 
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
