--- a/src/examples/pedro/index.html
+++ b/src/examples/pedro/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="data:,">
-        <title>MaCAD-IAAC-Final Assignment</title>
+        <title>IaaC_Pedro Ribeiro - Final assignment</title>
         <style>
-          body {
-              margin: 0;
-              font-family: monospace;
-          }
+            body {
+                margin: 0;
+                font-family: monospace;
+            }
             canvas { width: 100%; height: 100%; }
-            input[type=range] { width: 30%; }
+            input[type=range] { width: 20%; }
             #container { position: relative; }
             #container canvas, #overlay { position: absolute; }
-            #overlay { z-index: 1; width: 50%; }
+            #overlay { z-index: 1; width: 100%; }
             #overlay div { padding: 5px; }
             #loader {
-                border: 5px solid #5a5959; /* Light grey */
+                border: 5px solid #9b9b9b; /* Light grey */
                 border-top: 5px solid #3d3d3d; /* Grey */
                 border-radius: 50%;
                 width: 40px;
@@ -37,71 +37,94 @@
         <div id="loader"></div> 
         <div id="container">
             <div id="overlay">
-              <div><h1>DESIGN YOUR VASE FOR 3D PRINT</div>
-<!-- /////////////////////////////////////////////////////////////////////////// -->
-      <div>
-              <label for="RH_IN:density">Density: More material</label>
-              <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
-    </div>
-    <div>
-      <label for="radius">Radius: For Vase</label>
-      <input type="range" id="radius" name="radius" min="1" max="5.00" value="3" step="1">
-</div>
-<div>
-  <label for="height">Height: For Vase</label>
-  <input type="range" id="height" name="length" min="80" max="100.00" value="89" step="2">
-</div>
-<div>
-  <label for="rotate">Rotate: Vase Rotation</label>
-  <input type="range" id="rotate" name="length" min="0" max="360.00" value="120" step="30">
-
-</div>
-<!-- /////////////////////////////////////////////////////////////////////////// -->
-
-<div>
-
-
-  <label for="RH_IN:3dprint">3D Print off</label>
-  <input type="checkbox" id="RH_IN:3dprint" >
-  </div>
-<div><button id="downloadButton" disabled>Download</button></div>
-                <!-- <div><a href="3DPrint.gh" download="3DPrint.gh.html">Save source code</a></div> -->
+              <div><h1>THE LAST TOWER AND THE FIRST ROOF
+              </h1></div>
+                <div>
+                  <label for="RH_IN:height">Tower: Floor height</label>
+                  <input type="range" id="RH_IN:height" min="3" max="4.5" value="4" step="0.5">
+                </div>
+                <div>
+                  <label for="RH_IN:count">Tower: Number of floors</label>
+                  <input type="range" id="RH_IN:count" min="5" max="20" value="10" step="1">
+                </div>
+                <div>
+                  <label for="RH_IN:rotation">Tower: Rotation</label>
+                  <input type="range" id="RH_IN:rotation" min="0" max="90" value="45" step="1">
+                </div>
+                <div>
+                <label for="RH_IN:roofsize">Roof: Size</label>
+                  <input type="range" id="RH_IN:roofsize" min="0.4" max=".8" value="0.5" step="0.1">
+                </div>
+                <div>
+                <label for="RH_IN:roofshape">Roof: Shape</label>
+                  <input type="range" id="RH_IN:roofshape" min="6" max="18" value="6" step="1">
+                </div>
+                <div>
+                <label for="RH_IN:sunstudy">Sun study off</label>
+                  <input type="checkbox" id="RH_IN:sunstudy" >
+                </div>
+                <div>
+                  <label for="RH_IN:month">Months</label>
+                  <select name="monthDropdown" id="RH_IN:month">
+                    <option value="1">January</option>
+                    <option value="2">February</option>
+                    <option value="3">March</option>
+                    <option value="4">April</option>
+                    <option value="5">May</option>
+                    <option value="6">June</option>
+                    <option value="4">July</option>
+                    <option value="4">August</option>
+                    <option value="4">September</option>
+                    <option value="4">October</option>
+                    <option value="4">November</option>
+                    <option value="4">December</option>
+                  </select>
+                </div>
+                <div>
+                  <label for="RH_IN:day">Day</label>
+                  <select name="dayDropdown" id="RH_IN:day">
+                    <option value="1">1</option>
+                    <option value="8">8</option>
+                    <option value="15">15</option>
+                    <option value="21">21</option>
+                  </select>
+                </div>
+                <div>
+                  <div>
+                <div><button id="downloadButton" disabled>Download</button></div>
+                <!-- <div><a href="GH_final_tower_solar studies.gh" download="GH_final_tower_solar studies.gh.html">Save source code</a></div> -->
             </div>
         </div>
-
         <script type="module">
 import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.126.0/build/three.module.js'
 import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.126.0/examples/jsm/controls/OrbitControls.js'
 import { Rhino3dmLoader } from 'https://cdn.jsdelivr.net/npm/three@0.126.0/examples/jsm/loaders/3DMLoader.js'
 import rhino3dm from 'https://cdn.jsdelivr.net/npm/rhino3dm@0.15.0-beta/rhino3dm.module.js'
-
 // set up loader for converting the results to threejs
 const loader = new Rhino3dmLoader()
 loader.setLibraryPath( 'https://cdn.jsdelivr.net/npm/rhino3dm@0.15.0-beta/' )
-
 // initialise 'data' object that will be used by compute()
 const data = {
-  definition: '3DPrint.gh',
+  definition: 'GH_final_tower_solar studies.gh',
   inputs: getInputs()
 }
-
 // globals
 let rhino, doc
-
 rhino3dm().then(async m => {
     rhino = m
-
     init()
+    loadContext()
     compute()
 })
-
 const downloadButton = document.getElementById("downloadButton")
 downloadButton.onclick = download
+
+
+
 
   /////////////////////////////////////////////////////////////////////////////
  //                            HELPER  FUNCTIONS                            //
 /////////////////////////////////////////////////////////////////////////////
-
 /**
  * Gets <input> elements from html and sets handlers
  * (html is generated from the grasshopper definition)
@@ -127,104 +150,97 @@ function getInputs() {
         break
     }
   }
-///////////////////////////////////////////////////////////////////////////
+ //LIST VALUES - It calls the values list box for months and days
   for (const input of document.getElementsByTagName('select')) {
     inputs[input.id] = input.value
     input.onchange = onSliderChange
   }
-///////////////////////////////////////////////////////////////////////////
   return inputs
 }
-
 // more globals
 let scene, camera, renderer, controls
-
 /**
  * Sets up the scene, camera, renderer, lights and controls and starts the animation
  */
 function init() {
-
     // Rhino models are z-up, so set this as the default
     THREE.Object3D.DefaultUp = new THREE.Vector3( 0, 0, 1 );
-
-
-
-
-
-
-
     // create a scene and a camera
     scene = new THREE.Scene()
     scene.background = new THREE.Color(1, 1, 1)
+    scene.add( new THREE.AmbientLight( 0xf0f0f0 ) );
+		const light = new THREE.SpotLight( 0xffffff, 1 );
+		light.position.set( 0, 1500, 200 );
+		light.angle = Math.PI * 0.2;
+		light.castShadow = true;
+		light.shadow.camera.near = 200;
+		light.shadow.camera.far = 2000;
+		light.shadow.bias = - 0.000222;
+		light.shadow.mapSize.width = 1024;
+		light.shadow.mapSize.height = 1024;
+		scene.add( light );
     camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000)
     camera.position.set(1, -1, 1) // like perspective view
-
     // very light grey for background, like rhino
-    scene.background = new THREE.Color(255,255,255,0)
-
+    scene.background = new THREE.Color('whitesmoke')
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
     renderer.setPixelRatio( window.devicePixelRatio )
     renderer.setSize(window.innerWidth, window.innerHeight)
     document.body.appendChild(renderer.domElement)
-
     // add some controls to orbit the camera
     controls = new OrbitControls(camera, renderer.domElement)
-
     // add a directional light
     const directionalLight = new THREE.DirectionalLight( 0xffffff )
-    directionalLight.intensity = 2
+    directionalLight.intensity = 1
     scene.add( directionalLight )
-
     const ambientLight = new THREE.AmbientLight()
     scene.add( ambientLight )
-
     // handle changes in the window size
     window.addEventListener( 'resize', onWindowResize, false )
-
     animate()
 }
-
+function loadContext() {
+  loader.load( 'final_assignment_context.3dm', function (object) {
+    object.traverse(child => {
+      child.name = 'context'
+    })
+    scene.add(object)
+  })
+}
 /**
  * Call appserver
  */
 async function compute() {
   // construct url for GET /solve/definition.gh?name=value(&...)
+  ///////////////////////////////////////////////////////////////////////////
+  // update call to compute to use data.definition, instead of hard-coding
+  // the grasshopper file name
   const url = new URL('/solve/' + data.definition, window.location.origin)
   Object.keys(data.inputs).forEach(key => url.searchParams.append(key, data.inputs[key]))
   console.log(url.toString())
-  
   try {
     const response = await fetch(url)
-  
     if(!response.ok) {
       // TODO: check for errors in response json
       throw new Error(response.statusText)
     }
-
     const responseJson = await response.json()
-
     collectResults(responseJson)
-
   } catch(error) {
     console.error(error)
   }
 }
-
 /**
  * Parse response
  */
 function collectResults(responseJson) {
-
     const values = responseJson.values
-
     // clear doc
     if( doc !== undefined)
         doc.delete()
-
     //console.log(values)
     doc = new rhino.File3dm()
-
     // for each output (RH_OUT:*)...
     for ( let i = 0; i < values.length; i ++ ) {
       // ...iterate through data tree structure...
@@ -240,47 +256,41 @@ function collectResults(responseJson) {
         }
       }
     }
-
     if (doc.objects().count < 1) {
       console.error('No rhino objects to load!')
       showSpinner(false)
       return
     }
-
+  // hack (https://github.com/mcneel/rhino3dm/issues/353)
+  const sphereAttrs = new rhino.ObjectAttributes()
+    sphereAttrs.mode = rhino.ObjectMode.Hidden
+    doc.objects().addSphere(new rhino.Sphere([0,0,0], 0.001), sphereAttrs)
     // load rhino doc into three.js scene
     const buffer = new Uint8Array(doc.toByteArray()).buffer
     loader.parse( buffer, function ( object ) 
     {
-///////////////////////////////////////////////////////////////////////////
-        // show mesh edges
+        // debug 
+        /*
         object.traverse(child => {
-          if (child.isMesh) {
-            const edges = new THREE.EdgesGeometry( child.geometry );
-            const line = new THREE.LineSegments( edges, new THREE.LineBasicMaterial( { color: 0x000000 } ) )
-            child.add( line )
-          }
+          if (child.material !== undefined)
+            child.material = new THREE.MeshNormalMaterial()
         }, false)
-///////////////////////////////////////////////////////////////////////////
-
+        */
         // clear objects from scene. do this here to avoid blink
         scene.traverse(child => {
-            if (!child.isLight) {
+          if (!child.isLight && child.name !== 'context') {
                 scene.remove(child)
             }
         })
-
         // add object graph from rhino model to three.js scene
         scene.add( object )
-
         // hide spinner and enable download button
         showSpinner(false)
         downloadButton.disabled = false
-
         // zoom to extents
         zoomCameraToSelection(camera, controls, scene.children)
     })
 }
-
 /**
  * Attempt to decode data tree item to rhino geometry
  */
@@ -296,7 +306,6 @@ function decodeItem(item) {
   }
   return null
 }
-
 /**
  * Called when a slider value changes in the UI. Collect all of the
  * slider values and call compute to solve for a new scene
@@ -318,17 +327,12 @@ function onSliderChange () {
       break
     }
   }
-///////////////////////////////////////////////////////////////////////////
   for (const input of document.getElementsByTagName('select')) {
     inputs[input.id] = input.value
   }
-///////////////////////////////////////////////////////////////////////////
-  
   data.inputs = inputs
-
   compute()
 }
-
 /**
  * The animation loop!
  */
@@ -337,7 +341,6 @@ function animate() {
   controls.update()
   renderer.render(scene, camera)
 }
-
 /**
  * Helper function for window resizes (resets the camera pov and renderer size)
   */
@@ -347,43 +350,33 @@ function onWindowResize() {
   renderer.setSize( window.innerWidth, window.innerHeight )
   animate()
 }
-
 /**
  * Helper function that behaves like rhino's "zoom to selection", but for three.js!
  */
 function zoomCameraToSelection( camera, controls, selection, fitOffset = 1.2 ) {
-  
   const box = new THREE.Box3();
-  
   for( const object of selection ) {
     if (object.isLight) continue
     box.expandByObject( object );
   }
-  
   const size = box.getSize( new THREE.Vector3() );
   const center = box.getCenter( new THREE.Vector3() );
-  
   const maxSize = Math.max( size.x, size.y, size.z );
   const fitHeightDistance = maxSize / ( 2 * Math.atan( Math.PI * camera.fov / 360 ) );
   const fitWidthDistance = fitHeightDistance / camera.aspect;
   const distance = fitOffset * Math.max( fitHeightDistance, fitWidthDistance );
-  
   const direction = controls.target.clone()
     .sub( camera.position )
     .normalize()
     .multiplyScalar( distance );
   controls.maxDistance = distance * 10;
   controls.target.copy( center );
-  
   camera.near = distance / 100;
   camera.far = distance * 100;
   camera.updateProjectionMatrix();
   camera.position.copy( controls.target ).sub(direction);
-  
   controls.update();
-  
 }
-
 /**
  * This function is called when the download button is clicked
  */
@@ -391,7 +384,6 @@ function download () {
     // write rhino doc to "blob"
     const bytes = doc.toByteArray()
     const blob = new Blob([bytes], {type: "application/octect-stream"})
-
     // use "hidden link" trick to get the browser to download the blob
     const filename = data.definition.replace(/\.gh$/, '') + '.3dm'
     const link = document.createElement('a')
@@ -399,7 +391,6 @@ function download () {
     link.download = filename
     link.click()
 }
-
 /**
  * Shows or hides the loading spinner
  */
