--- a/src/examples/dresser3/dresser3.gh.html
+++ b/src/examples/dresser3/dresser3.gh.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="data:,">
-        <title>MaCAD-IAAC-Final Assignment</title>
+        <title>dresser3.gh</title>
         <style>
-          body {
-              margin: 0;
-              font-family: monospace;
-          }
+            body {
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
             canvas { width: 100%; height: 100%; }
-            input[type=range] { width: 30%; }
+            input[type=range] { width: 100%; }
             #container { position: relative; }
             #container canvas, #overlay { position: absolute; }
-            #overlay { z-index: 1; width: 50%; }
+            #overlay { z-index: 1; width: 100%; }
             #overlay div { padding: 5px; }
             #loader {
-                border: 5px solid #5a5959; /* Light grey */
+                border: 5px solid #f3f3f3; /* Light grey */
                 border-top: 5px solid #3d3d3d; /* Grey */
                 border-radius: 50%;
                 width: 40px;
@@ -37,35 +37,28 @@
         <div id="loader"></div> 
         <div id="container">
             <div id="overlay">
-              <div><h1>DESIGN YOUR VASE FOR 3D PRINT</div>
-<!-- /////////////////////////////////////////////////////////////////////////// -->
-      <div>
-              <label for="RH_IN:density">Density: More material</label>
-              <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
-    </div>
-    <div>
-      <label for="radius">Radius: For Vase</label>
-      <input type="range" id="radius" name="radius" min="1" max="5.00" value="3" step="1">
-</div>
-<div>
-  <label for="height">Height: For Vase</label>
-  <input type="range" id="height" name="length" min="80" max="100.00" value="89" step="2">
-</div>
-<div>
-  <label for="rotate">Rotate: Vase Rotation</label>
-  <input type="range" id="rotate" name="length" min="0" max="360.00" value="120" step="30">
-
-</div>
-<!-- /////////////////////////////////////////////////////////////////////////// -->
-
-<div>
-
-
-  <label for="RH_IN:3dprint">3D Print off</label>
-  <input type="checkbox" id="RH_IN:3dprint" >
-  </div>
-<div><button id="downloadButton" disabled>Download</button></div>
-                <!-- <div><a href="3DPrint.gh" download="3DPrint.gh.html">Save source code</a></div> -->
+                <div>
+                  <label for="RH_IN:explode">RH_IN:explode</label>
+                  <input type="checkbox" id="RH_IN:explode" >
+                </div>
+                <div>
+                  <label for="height">height</label>
+                  <input type="range" id="height" min="100" max="1000" value="500" step="1">
+                </div>
+                <div>
+                  <label for="width">width</label>
+                  <input type="range" id="width" min="800" max="2000" value="1000" step="1">
+                </div>
+                <div>
+                  <label for="depth">depth</label>
+                  <input type="range" id="depth" min="200" max="700" value="300" step="1">
+                </div>
+                <div>
+                  <label for="num">num</label>
+                  <input type="range" id="num" min="1" max="10" value="3" step="1">
+                </div>
+                <div><button id="downloadButton" disabled>Download</button></div>
+                <div><a href="dresser3.gh" download="dresser3.gh.html">Save source code</a></div>
             </div>
         </div>
 
@@ -81,7 +74,7 @@ loader.setLibraryPath( 'https://cdn.jsdelivr.net/npm/rhino3dm@0.15.0-beta/' )
 
 // initialise 'data' object that will be used by compute()
 const data = {
-  definition: '3DPrint.gh',
+  definition: 'dresser3.gh',
   inputs: getInputs()
 }
 
@@ -127,12 +120,6 @@ function getInputs() {
         break
     }
   }
-///////////////////////////////////////////////////////////////////////////
-  for (const input of document.getElementsByTagName('select')) {
-    inputs[input.id] = input.value
-    input.onchange = onSliderChange
-  }
-///////////////////////////////////////////////////////////////////////////
   return inputs
 }
 
@@ -147,12 +134,6 @@ function init() {
     // Rhino models are z-up, so set this as the default
     THREE.Object3D.DefaultUp = new THREE.Vector3( 0, 0, 1 );
 
-
-
-
-
-
-
     // create a scene and a camera
     scene = new THREE.Scene()
     scene.background = new THREE.Color(1, 1, 1)
@@ -160,7 +141,7 @@ function init() {
     camera.position.set(1, -1, 1) // like perspective view
 
     // very light grey for background, like rhino
-    scene.background = new THREE.Color(255,255,255,0)
+    scene.background = new THREE.Color('whitesmoke')
 
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
@@ -251,16 +232,13 @@ function collectResults(responseJson) {
     const buffer = new Uint8Array(doc.toByteArray()).buffer
     loader.parse( buffer, function ( object ) 
     {
-///////////////////////////////////////////////////////////////////////////
-        // show mesh edges
+        // debug 
+        /*
         object.traverse(child => {
-          if (child.isMesh) {
-            const edges = new THREE.EdgesGeometry( child.geometry );
-            const line = new THREE.LineSegments( edges, new THREE.LineBasicMaterial( { color: 0x000000 } ) )
-            child.add( line )
-          }
+          if (child.material !== undefined)
+            child.material = new THREE.MeshNormalMaterial()
         }, false)
-///////////////////////////////////////////////////////////////////////////
+        */
 
         // clear objects from scene. do this here to avoid blink
         scene.traverse(child => {
@@ -318,11 +296,6 @@ function onSliderChange () {
       break
     }
   }
-///////////////////////////////////////////////////////////////////////////
-  for (const input of document.getElementsByTagName('select')) {
-    inputs[input.id] = input.value
-  }
-///////////////////////////////////////////////////////////////////////////
   
   data.inputs = inputs
 
