--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -6,21 +6,24 @@
         <title>MaCAD-IAAC-Final Assignment</title>
         <style>
           body {
-              margin: 0;
+            margin-top:19cm; /*due to padding of image*/
+            text-align:center;
+            background-color:rgb(0, 0, 0);
+            color: rgb(255, 255, 255); /*grey color*/
               font-family: monospace;
           }
             canvas { width: 100%; height: 100%; }
-            input[type=range] { width: 30%; }
+            input[type=range] { width: 20%; }
             #container { position: relative; }
             #container canvas, #overlay { position: absolute; }
-            #overlay { z-index: 1; width: 50%; }
+            #overlay { z-index: 1; width: 100%; }
             #overlay div { padding: 5px; }
             #loader {
                 border: 5px solid #5a5959; /* Light grey */
                 border-top: 5px solid #3d3d3d; /* Grey */
                 border-radius: 50%;
-                width: 40px;
-                height: 40px;
+                width: 30px;
+                height: 30px;
                 animation: spin 1s linear infinite;
                 position: absolute;
                 top: 50%;
@@ -37,22 +40,22 @@
         <div id="loader"></div> 
         <div id="container">
             <div id="overlay">
-              <div><h1>DESIGN YOUR VASE FOR 3D PRINT</div>
+           <div> <h1>DESIGN YOUR VASE FOR 3D PRINT</h1></div>
 <!-- /////////////////////////////////////////////////////////////////////////// -->
       <div>
-              <label for="RH_IN:density">Density: More material</label>
+              <label for="RH_IN:density">DENSITY OF MATERIAL</label>
               <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
     </div>
     <div>
-      <label for="radius">Radius: For Vase</label>
+      <label for="radius">RADIUS FOR VASE</label>
       <input type="range" id="radius" name="radius" min="1" max="5.00" value="3" step="1">
 </div>
 <div>
-  <label for="height">Height: For Vase</label>
+  <label for="height">HEIGHT FOR VASE</label>
   <input type="range" id="height" name="length" min="80" max="100.00" value="89" step="2">
 </div>
 <div>
-  <label for="rotate">Rotate: Vase Rotation</label>
+  <label for="rotate">ROTATE</label>
   <input type="range" id="rotate" name="length" min="0" max="360.00" value="120" step="30">
 
 </div>
@@ -128,10 +131,11 @@ function getInputs() {
     }
   }
 ///////////////////////////////////////////////////////////////////////////
+  /*
   for (const input of document.getElementsByTagName('select')) {
     inputs[input.id] = input.value
     input.onchange = onSliderChange
-  }
+  */
 ///////////////////////////////////////////////////////////////////////////
   return inputs
 }
@@ -147,20 +151,25 @@ function init() {
     // Rhino models are z-up, so set this as the default
     THREE.Object3D.DefaultUp = new THREE.Vector3( 0, 0, 1 );
 
-
-
-
-
-
-
     // create a scene and a camera
     scene = new THREE.Scene()
     scene.background = new THREE.Color(1, 1, 1)
+    scene.add( new THREE.AmbientLight( 0xf0f0f0 ) );
+		const light = new THREE.SpotLight( 0xffffff, 1 );
+		light.position.set( 0, 1500, 200 );
+		light.angle = Math.PI * 0.2;
+		light.castShadow = true;
+		light.shadow.camera.near = 200;
+		light.shadow.camera.far = 2000;
+		light.shadow.bias = - 0.000222;
+		light.shadow.mapSize.width = 1024;
+		light.shadow.mapSize.height = 1024;
+		scene.add( light );
     camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000)
     camera.position.set(1, -1, 1) // like perspective view
 
     // very light grey for background, like rhino
-    scene.background = new THREE.Color(255,255,255,0)
+    scene.background = new THREE.Color(whitesmoke)
 
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
@@ -173,7 +182,7 @@ function init() {
 
     // add a directional light
     const directionalLight = new THREE.DirectionalLight( 0xffffff )
-    directionalLight.intensity = 2
+    directionalLight.intensity = 1
     scene.add( directionalLight )
 
     const ambientLight = new THREE.AmbientLight()
@@ -247,19 +256,26 @@ function collectResults(responseJson) {
       return
     }
 
+    // hack (https://github.com/mcneel/rhino3dm/issues/353)
+  const sphereAttrs = new rhino.ObjectAttributes()
+    sphereAttrs.mode = rhino.ObjectMode.Hidden
+    doc.objects().addSphere(new rhino.Sphere([0,0,0], 0.001), sphereAttrs)
     // load rhino doc into three.js scene
     const buffer = new Uint8Array(doc.toByteArray()).buffer
     loader.parse( buffer, function ( object ) 
-    {
+   {
+     
 ///////////////////////////////////////////////////////////////////////////
         // show mesh edges
-        object.traverse(child => {
-          if (child.isMesh) {
-            const edges = new THREE.EdgesGeometry( child.geometry );
-            const line = new THREE.LineSegments( edges, new THREE.LineBasicMaterial( { color: 0x000000 } ) )
-            child.add( line )
-          }
+       /* object.traverse(child => {
+       if (child.isMesh) {
+           const edges = new THREE.EdgesGeometry( child.geometry );
+           const line = new THREE.LineSegments( edges, new THREE.LineBasicMaterial( { color: 0x000000 } ) )
+         child.add( line )
+        }
         }, false)
+        */
+
 ///////////////////////////////////////////////////////////////////////////
 
         // clear objects from scene. do this here to avoid blink
