--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -6,24 +6,22 @@
         <title>MaCAD-IAAC-Final Assignment</title>
         <style>
           body {
-            margin-top:19cm; /*due to padding of image*/
-            text-align:center;
-            background-color:rgb(0, 0, 0);
+            text-align:right;
             color: rgb(255, 255, 255); /*grey color*/
-              font-family: monospace;
+            font-family: monospace;
           }
-            canvas { width: 100%; height: 100%; }
+            canvas { width: 100% ; height: 100% ; }
             input[type=range] { width: 20%; }
             #container { position: relative; }
             #container canvas, #overlay { position: absolute; }
             #overlay { z-index: 1; width: 100%; }
             #overlay div { padding: 5px; }
             #loader {
-                border: 5px solid #5a5959; /* Light grey */
+                border: 5px solid #2bff00; /* Light grey */
                 border-top: 5px solid #3d3d3d; /* Grey */
                 border-radius: 50%;
-                width: 30px;
-                height: 30px;
+                width: 40px;
+                height: 40px;
                 animation: spin 1s linear infinite;
                 position: absolute;
                 top: 50%;
@@ -169,7 +167,23 @@ function init() {
     camera.position.set(1, -1, 1) // like perspective view
 
     // very light grey for background, like rhino
-    scene.background = new THREE.Color(whitesmoke)
+    // scene.background = new THREE.Color('black')
+
+    //texture Loader
+    {
+    const loader = new THREE.TextureLoader();
+    
+    const texture = loader.load(
+      'https://threejsfundamentals.org/threejs/resources/images/equirectangularmaps/tears_of_steel_bridge_2k.jpg',
+      () => {
+        const rt = new THREE.WebGLCubeRenderTarget(texture.image.height);
+        rt.fromEquirectangularTexture(renderer, texture);
+        scene.background = rt;
+        
+      });
+  }
+  
+
 
     // create the renderer and add it to the html
     renderer = new THREE.WebGLRenderer({ antialias: true })
@@ -219,6 +233,7 @@ async function compute() {
     console.error(error)
   }
 }
+
 
 /**
  * Parse response
