update-errors in sliders

--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -42,19 +42,19 @@
 <!-- /////////////////////////////////////////////////////////////////////////// -->
       <div>
               <label for="RH_IN:density">DENSITY OF MATERIAL</label>
-              <input type="range" id="" name="density" min="1" max="50" value="08" step="2">
+              <input type="range" id="RH_IN:density" name="density" min="1" max="50" value="8" step="2">
     </div>
     <div>
-      <label for="radius">RADIUS FOR VASE</label>
-      <input type="range" id="radius" name="radius" min="1" max="5.00" value="3" step="1">
+      <label for="RH_IN:radius">RADIUS FOR VASE</label>
+      <input type="range" id="RH_IN:radius" name="radius" min="1" max="5.00" value="3" step="4">
 </div>
 <div>
-  <label for="height">HEIGHT FOR VASE</label>
-  <input type="range" id="height" name="length" min="80" max="100.00" value="89" step="2">
+  <label for="RH_IN:height">HEIGHT FOR VASE</label>
+  <input type="range" id="RH_IN:height" name="length" min="80" max="100.00" value="89" step="5">
 </div>
 <div>
-  <label for="rotate">ROTATE</label>
-  <input type="range" id="rotate" name="length" min="0" max="360.00" value="120" step="30">
+  <label for="RH_IN:rotate">ROTATE</label>
+  <input type="range" id="RH_IN:rotate" name="length" min="0" max="360.00" value="120" step="30">
 
 </div>
 <!-- /////////////////////////////////////////////////////////////////////////// -->
