--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -62,7 +62,7 @@
 <div>
 
 
-  <label for="RH_IN:3dprint">3D Print off</label>
+  <label for="RH_IN:3dprint">3D Print on</label>
   <input type="checkbox" id="RH_IN:3dprint" >
   </div>
 <div><button id="downloadButton" disabled>Download</button></div>
