--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -65,6 +65,16 @@
   <label for="RH_IN:3dprint">3D Print on</label>
   <input type="checkbox" id="RH_IN:3dprint" >
   </div>
+  <div>
+    <label for="RH_IN:type">TYPE</label>
+    <select name="typeDropdown" id="RH_IN:type">
+      <option value="0">INVERTED CONE</option>
+      <option value="1">TROPHY</option>
+      <option value="2">SINE</option>
+      <option value="3">FLASK</option>
+      <option value="4">ORGANIC</option>
+ </select>
+  </div>
 <div><button id="downloadButton" disabled>Download</button></div>
                 <!-- <div><a href="3DPrint.gh" download="3DPrint.gh.html">Save source code</a></div> -->
             </div>
