Revert "update text"
This reverts commit 5db32925fd9392b511cce57b7dc7783cf8d42b28.

--- a/src/examples/3DPrint/index.html
+++ b/src/examples/3DPrint/index.html
@@ -62,7 +62,7 @@
 <div>
 
 
-  <label for="RH_IN:3dprint">3D Print on</label>
+  <label for="RH_IN:3dprint">3D Print off</label>
   <input type="checkbox" id="RH_IN:3dprint" >
   </div>
 
